--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "hbs": "~4.0.4",
+    "express": "^4.18.2",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
+    "mongoose": "^8.0.1",
     "morgan": "~1.9.1",
-    "node": "^21.1.0"
+    "node": "^21.2.0"
   }
 }
