--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
+    "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "google-auth-library": "^9.2.0",
