add facebook login

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ GOOGLE_MAILER_REFRESH_TOKEN = '1//040IBQ7WmEX25CgYIARAAGAQSNwF-L9Ir9CIJTa0297FRw
 ADMIN_EMAIL_ADDRESS = 'hoangduy161103@gmail.com'
 
 MONGO_URI = 'mongodb+srv://thduy161103:A6DWueoYXaz2NLtO@cluster0.7dzahsd.mongodb.net/SneakerShopping?retryWrites=true&w=majority'
+
+FACEBOOK_CLIENT_ID = '686938090223239'
+FACEBOOK_SECRET_KEY = '54acbe99cb8494d64098fd256009bcd4'
+FACEBOOK_CALLBACK_URL = 'http://localhost:3000/auth/facebook/callback'
