--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": "^20.9.0",
     "nodemailer": "^6.9.7",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0"
   }
 }
