--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.10.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "node": "^20.9.0",
     "nodemailer": "^6.9.7",
     "passport": "^0.7.0",
