--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ GOOGLE_MAILER_CLIENT_SECRET = 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
 GOOGLE_MAILER_REFRESH_TOKEN = 1//042bRopwdqrGTCgYIARAAGAQSNwF-L9IrXD7YFeoco2SM45aVo3ANCGnoXDsgZWVn-oNSYasyk9Buaa2xDATRRWuhY1DHTLm7oTo
 ADMIN_EMAIL_ADDRESS = 'hoangduy161103@gmail.com'
 
-MONGO_URI = mongodb+srv://thduy161103:A6DWueoYXaz2NLtO@cluster0.7dzahsd.mongodb.net/TUS?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://thduy161103:A6DWueoYXaz2NLtO@cluster0.7dzahsd.mongodb.net/MyShopping?retryWrites=true&w=majority
 
 PORT = 3000
 
